# developer-joyofenergy-python

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  test_requirements.txt
.github/workflows/: build.pipeline.yaml  ci.yml
src/: app.py  app_initializer.py  config.py  main.py  router.py  swagger.yml
src/controller/: electricity_reading_controller.py  models.py  price_plan_comparator_controller.py
src/domain/: electricity_reading.py  price_plan.py
src/generator/: electricity_reading_generator.py
src/repository/: electricity_reading_repository.py  price_plan_repository.py
src/service/: account_service.py  electricity_reading_service.py  price_plan_service.py  time_converter.py
src/system/: routes.py
test/: __init__.py
test/controller/: setup_test_app.py  test_electricityReadingController.py  test_pricePlanComparatorController.py
test/domain/: test_PricePlan.py
test/generator/: test_electricityReadingGenerator.py
test/repository/: test_electricityReadingRepository.py
test/service/: test_ElectricityReadingService.py  test_PricePlanService.py  test_TimeConverter.py
tests/: __init__.py
tests/controller/: test_electricityReadingController.py  test_pricePlanComparatorController.py
tests/domain/: test_PricePlan.py
tests/generator/: test_electricityReadingGenerator.py
tests/repository/: test_electricityReadingRepository.py
tests/service/: test_ElectricityReadingService.py  test_PricePlanService.py  test_TimeConverter.py
